<resources>
    <string name="app_name">Thomas Greg Challenge</string>
    <string name="create_new_user_button_content_description">Create new User Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name_string">Nome Completo</string>
    <string name="nickname_string">Apelido</string>
    <string name="email_address_string">Endereço de email</string>
    <string name="next_string">Próximo</string>
    <string name="address_string">Endereço</string>
    <string name="birth_data_string">Data de nascimento</string>
    <string name="choose_gender_title_string">Qual seu gênero?</string>
    <string name="man_label">Homem</string>
    <string name="woman_label">Mulher</string>
    <string name="user_data_details_string">Vamos Conhecer um pouco \nmais você</string>
    <string name="user_data_fragment_title_string">Vamos começar o cadastro!</string>
    <string name="user_document_title_string">Agora iremos precisar dos seus documentos.</string>
    <string name="choose_cpf_cnpj_text">Você é Pessoa Física ou Jurídica?</string>
    <string name="cpf_string">CPF</string>
    <string name="cnpj_string">CNPJ</string>
    <string name="cpf_cnpj_hint">CPF/CNPJ</string>
    <string name="user_password_title_string">E por fim, vamos precisar de uma senha para sua conta.</string>
    <string name="finish_registration_string">Finalizar Cadastro</string>
    <string name="password_string">Senha</string>
    <string name="confirm_password_hint_string">Confirme sua senha</string>
    <string name="data_field_error_message">Preencha todos os campos para continuar o registro.</string>
    <string name="name_must_be_complete_error_message">Escreva seu nome completo.</string>
    <string name="email_invalid_error_message">O email inserido é inválido.</string>
    <string name="user_name_already_exists_error_message">Esse nome de usuário já está cadastrado.</string>
    <string name="unknown_error_message">Houve algum erro desconhecido.</string>
    <string name="user_under_age_error_message">É preciso ser maior de idade para terminar o cadastro.</string>
    <string name="invalid_cpf_error_message">O CPF informado é inválido.</string>
    <string name="invalid_cnpj_error_message">O CNPJ informado é inválido.</string>
    <string name="invalid_password_error_message">A senha informada não é válida.</string>
    <string name="password_dont_matches_error_message">As senhas não coincidem.</string>
    <string name="registration_error_message">Houve algum erro ao tentar te cadastrar.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet metus id purus condimentum, non mattis enim pulvinar.</string>
    <string name="warning_box_title_default">Atenção</string>
    <string name="okay_string">Okay</string>
    <string name="no_image_selected">Nenhuma imagem foi selecionada</string>
    <string name="required_field_error_string">Campo obrigatório</string>
    <string name="name_must_be_complete_error_hint">Escreva o seu nome completo.</string>
    <string name="user_name_already_exists_error_hint">Esse nome de usuário já existe.</string>
    <string name="choose_profile_picture_error_message">Escolha uma foto de perfil</string>
    <string name="choose_a_profile_picture_description">Escolha uma foto de perfil</string>
    <string name="user_under_age_error_hint">Usuário menor de idade</string>
    <string name="invalid_cpf_error_hint">CPF inválido</string>
    <string name="invalid_cnpj_error_hint">CNPJ inválido</string>
    <string name="different_passwords_error_hint">As Senhas estão diferentes</string>
    <string name="invalid_password_error_hint">Senha inválida</string>
    <string name="delete_user_button_string">Excluir usuário</string>
    <string name="no_users_message">Não foi encontrado nenhum usuário.</string>
    <string name="delete_user_error_msg">Houve algum problema ao deletar o usuário.</string>
    <string name="warning_box_delete_user_message">Tem certeza que deseja deletar o usuário?</string>
    <string name="yes_string">Sim</string>
    <string name="no_string">Não</string>
    <string name="save_update_button_title">Salvar Alterações</string>
    <string name="change_password">Alterar Senha</string>
    <string name="user_not_found_error_message">Usuário não encontrado.</string>
    <string name="user_update_success_message">Usuário atualizado com sucesso</string>
    <string name="user_is_same_message">Não houve alteração no usuário.</string>
    <string name="update_error_message">Houve algum erro ao tentar atualizar o cadastro.</string>
    <string name="update_empty_field_error_message">Preencha todos os campos para continuar a atualização dos dados.</string>
    <string name="user_under_age_update_error_message">O usuário precisa ser maior de idade.</string>
    <string name="password_tip_string">A senha deve conter 8 digitos, no mínimo um número e uma letra maiúscula.</string>
    <string name="change_password_string">Trocar Senha</string>
    <string name="password_change_success_message">Senha trocada com sucesso!</string>
    <string name="password_change_error_message">Houve algum erro ao tentar trocar a sua senha.</string>
    <string name="file_not_found_error_message">A imagem não foi encontrada</string>
</resources>