<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.update.view.fragment.UserDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/choose_a_profile_picture_description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_full_name_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_full_name_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/full_name_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_nickname_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_full_name_update">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_nickname_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nickname_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_nickname_update">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_email_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_address_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_email_update">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_address_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_birth_date_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_address_update">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_birth_date_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_data_string" />
        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/radio_group_gender_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/minus_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_gender_title_update">

            <RadioButton
                android:id="@+id/radio_option_man_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man_label" />

            <RadioButton
                android:id="@+id/radio_option_woman_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman_label" />
        </RadioGroup>

        <TextView
            android:id="@+id/text_gender_title_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/choose_gender_title_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_birth_date_update" />

        <TextView
            android:id="@+id/text_cpf_cnpj_topic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/cpf_cnpj_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_gender_update" />

        <RadioGroup
            android:id="@+id/radio_group_cpf_cnpj_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/minus_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_cpf_cnpj_topic_title">

            <RadioButton
                android:id="@+id/radio_option_cpf_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpf_string" />

            <RadioButton
                android:id="@+id/radio_option_cnpj_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cnpj_string" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_cpf_cnpj_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_cpf_cnpj_update">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_cpf_cnpj_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf_cnpj_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_save_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/save_update_button_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_cpf_cnpj_update" />

        <Button
            android:id="@+id/button_change_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/change_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_save_update" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>