<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.view.fragments.InputUserPasswordFragment">

    <TextView
        android:id="@+id/text_user_password_fragment_title"
        style="@style/TitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/title_margin_top"
        android:text="@string/user_password_title_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_password_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_tip_string"
        app:layout_constraintEnd_toEndOf="@id/text_user_password_fragment_title"
        app:layout_constraintStart_toStartOf="@id/text_user_password_fragment_title"
        app:layout_constraintTop_toBottomOf="@id/text_user_password_fragment_title" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_user_password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@id/input_layout_confirm_password_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_user_password_fragment_title"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_user_password_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/input_text_confirm_password_field"
            android:inputType="textPassword"
            android:hint="@string/password_string" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_confirm_password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/button_finish_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_user_password_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:hint="@string/confirm_password_hint_string" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_finish_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="?attr/colorTertiary"
        android:padding="10dp"
        android:text="@string/finish_registration_string"
        android:textColor="?attr/colorOnTertiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>